--- a/_config.yml
+++ b/_config.yml
@@ -15,9 +15,9 @@ keywords: ityouknow,纯洁的微笑,Spring,Spring Boot,Spring Cloud,MongoDB,Jvm,
 encoding: "utf-8"
 favicon: favicon.ico 
 
-repository: github_charles/github_charles.github.io
-github_url: https://github.com/github_charles
-url: http://www.github_charles.com
+repository: charles/charles.github.io
+github_url: https://github.com/charles
+url: http://www.charles.com
 enforce_ssl: charles.com
 
 ## Gem
