--- a/_config.yml
+++ b/_config.yml
@@ -15,8 +15,8 @@ keywords: ityouknow,纯洁的微笑,Spring,Spring Boot,Spring Cloud,MongoDB,Jvm,
 encoding: "utf-8"
 favicon: favicon.ico 
 
-repository: charles/charles.github.io
-github_url: https://github.com/charles
+repository: ljc1314/charles.github.io
+github_url: https://github.com/ljc1314
 url: https://charles.github.io
 #enforce_ssl: charles.com
 
